fix header text on mobile

--- a/css/custom-phone.css
+++ b/css/custom-phone.css
@@ -18,3 +18,7 @@ nav a {
 .header {
     text-align: center;
 }
+
+#headerCurveText2 {
+    margin-top: 3em;
+}
